--- a/minitalk/.vscode/settings.json
+++ b/minitalk/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "stdlib.h": "c",
+        "libft.h": "c",
+        "unistd.h": "c"
     }
 }
