--- a/fdf/Makefile
+++ b/fdf/Makefile
@@ -6,38 +6,32 @@
 #    By: jinypark <jinypark@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/24 17:01:08 by jinypark          #+#    #+#              #
-#    Updated: 2022/07/18 13:56:06 by jinypark         ###   ########.fr        #
+#    Updated: 2022/07/18 15:02:30 by jinypark         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = libft.a
+NAME = fdf
 
-CC = gcc
+CC = cc
 
 CFLAGS = -Wall -Wextra -Werror
 
-SRCS = ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c \
-	   ft_memchr.c ft_memcmp.c ft_strlen.c ft_strlcpy.c \
-	   ft_strlcat.c ft_strchr.c ft_strrchr.c ft_strnstr.c \
-	   ft_strncmp.c ft_atoi.c ft_isalpha.c ft_isdigit.c \
-	   ft_isalnum.c ft_isascii.c ft_isprint.c ft_toupper.c \
-	   ft_tolower.c ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c \
-	   ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c \
-	   ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
-	   get_next_line.c get_next_line_utils.c ft_atoi_base.c
+LIBFT_DIR = libft
 
-BONUS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
-		ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c \
-		ft_lstmap.c
+MLX_DIR = minilibx_macos
+
+SRCS = fdf.c parse_map.c assign_point.c event.c draw.c rotation.c bresenham.c
+
+BONUS = fdf_bonus.c parse_map_bonus.c assign_point_bonus.c event_bonus.c draw_bonus.c rotation_bonus.c bresenham_bonus.c
 
 OBJS_SRCS = $(SRCS:.c=.o)
 
 OBJS_BONUS = $(BONUS:.c=.o)
 
 ifdef BONUS_FLAG
-	OBJS = $(OBJS_SRCS:.c=.o) $(BONUS:.c=.o)
+	OBJS = $(OBJS_BONUS)
 else
-	OBJS = $(OBJS_SRCS:.c=.o)
+	OBJS = $(OBJS_SRCS)
 endif
 
 all: $(NAME)
@@ -46,18 +40,24 @@ all: $(NAME)
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 $(NAME): $(OBJS)
-	ar rcs $@ $^
-
+	make -C $(LIBFT_DIR)
+	make -C $(MLX_DIR)
+	$(CC) $(CFLAGS) -o fdf $(OBJS) libft/libft.a minilibx_macos/libmlx.a -framework openGL -framework AppKit
 
 bonus:
 	make BONUS_FLAG=1 all
 
 clean:
+	make clean -C $(LIBFT_DIR)
+	make clean -C $(MLX_DIR)
 	rm -f $(OBJS) $(OBJS_BONUS)
 
 fclean: clean
+	make fclean -C $(LIBFT_DIR)
 	rm -f $(NAME)
 
-re: fclean all
+re:
+	make fclean
+	make all
 
 .PHONY: bonus all clean fclean re
